--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,13 +27,34 @@ h1,h2,h3 {
     font-weight: normal;
 }
 
+section>h2 { 
+    font-size: 3rem;
+    font-family: 'Amatic-Bold';
+    letter-spacing: 4px;
+}
+
+section h2:after { 
+    content: '';
+    display: block;
+    margin: 1rem 0;
+    width: 4rem;
+    border-radius: .5rem;
+}
+
+p { 
+    font-family: 'OpenSans-Regular'
+}
+
+.active { 
+    color: var(--darkblue);
+}
+
 
 /*
     HEADER
 */ 
 
 header {
-    width: 100vw;
     background-color: white;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
     z-index: 0;
@@ -48,12 +69,16 @@ header section {
     padding: 2.5rem 4rem;
 }
 
+header ul { 
+    
+}
+
 header section img {
-    max-width: 100px;
+    max-width: 400px;
 }
 
 header form {
-    border-bottom: 1px solid var(--darkblue);
+    border-bottom: .1rem solid var(--darkblue);
 }
 
 header form button { 
@@ -86,10 +111,12 @@ nav {
 nav ul { 
     display: flex;
     align-items: center;
+    
 }
 
 nav ul li { 
-    margin:1rem 1.5rem;
+    margin:0 1.5rem;
+    margin-bottom: 1rem;
     text-align: center;
 
 }
@@ -116,11 +143,10 @@ nav ul li:nth-child(even) img {
 .product section:first-child {
     width: 50%;
     background-color:var(--brown);
-    padding: 3rem 0;
+    padding: 4rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
 }
 
 .product section:last-child {
@@ -131,6 +157,7 @@ nav ul li:nth-child(even) img {
 
 .product section:first-child ul {
     display: flex; 
+    
 }
 
 .product section:first-child ul:first-child {
@@ -155,35 +182,49 @@ h1,h2,h3 {
 
 .product section:first-child h3 {
     font-size: 2rem;
+    margin-top: 2rem;
 }
 
 .product section:first-child h1 {
     font-size: 4rem;
     letter-spacing: 6px;
+    margin-bottom: 1rem;
 }
 
 .feuille { 
-    max-width: 32px;
+    max-width: 25px;
 }
 
 .product section:first-child p:first-of-type { 
-    font-family: 'OpenSans-Regular';
     font-size: 1rem;
     text-align: center;
+    letter-spacing: 2px;
     word-spacing: 2px;
-    width: 60%;
+    width: 70%;
+    padding: 0 1.5rem;
+    margin: 2rem 0;
 }
 
 .product section:first-child p:last-of-type {
     font-family: 'OpenSans-SemiBold';
     font-size: 2rem;
     letter-spacing: 2px;
+    margin: 3rem 0;
+}
+
+.product form { 
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 30%;
 }
 
 .product form div {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 2rem 0;
 }
 
 .product form img {
@@ -195,17 +236,246 @@ h1,h2,h3 {
     height: 3rem;
     width: 30%;
     margin: 0 1rem;
+    text-align: center;
+}
+
+.product form button:first-of-type {
+   background-color: var(--darkblue);
+   height: 50px;
+   color:white;
+   text-transform: uppercase;
+   font-family: 'OpenSans-Bold';
+   border-radius: 3px;
+   padding: 0 1.5rem;
+   margin-right: 0.5rem;
+}
+
+.product form button:last-of-type {
+    background-color: transparent;
+    border: 1px solid var(--darkblue);
+    font-family: 'OpenSans-Bold';
+    border-radius: 3px;
+    width: 50px;
+    height: 50px;
+    
+ }
+
+ .product form button:last-of-type img {
+    max-width: 25px;
+ }
+
+
+ /*
+    SECTION PRESENTATION
+*/
+
+.presentation { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 4rem 0; 
+}
+
+.presentation h2:after { 
+    margin: 1rem auto;
+    border-top: .2rem solid var(--pink);
+}
+
+.presentation p { 
+    width: 50%;
+    text-align: justify;
+    text-align-last: left;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    word-spacing: 3px;
+    padding: 2rem 0;
+    line-height: 2;
+}
+
+/*
+    SPACER
+*/
+
+.spacer {
+    background-image: url("./../img/photo/spacer-min.jpg");
+    height: 200px;
+    min-height: 25%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* 
+    SECTION PROPERTIES & USE
+*/
+
+.properties { 
+    width: 90%;
+    margin: 3rem auto;
+}
+
+.properties h2:after { 
+    border-top: .2rem solid var(--darkblue);
+}
+
+.properties .nav { 
+    width: 40%;
+    display: flex; 
+    justify-content: space-between;
+}
+
+.properties ul li a { 
+    font-family: 'OpenSans-Bold';
+    font-size: 1.1rem;
+    letter-spacing: .1rem;
+}
+
+.properties article { 
+    margin: 3rem 0;
+}
+
+.properties ul:last-child li { 
+    background-image: url('./../img/puce.png');
+    background-repeat: no-repeat;
+    line-height: 3rem;
+    padding-left: 3rem;
+    font-family: 'OpenSans-Regular';
+    font-size: 1rem;
+}
+
+.properties ul:last-child span { 
+    font-family: 'OpenSans-SemiBold';
+    color: var(--darkblue);
 }
 
 
+/*
+    SPACER 2 
+*/
+
+.spacer2 { 
+    height: 200px;
+    background-image: url('./../img/photo/spacer2.jpg');
+    min-height: 25%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.spacer2 h3 { 
+    color: white;
+    font-size: 4rem;
+}
+
+.spacer2 a { 
+    border: .1rem solid white;
+    border-radius: 2px;
+    color:white;
+    font-family: 'OpenSans-Bold';
+    font-size: 1rem;
+    text-transform: uppercase;
+    padding: 1rem;
+}
+
+.spacer2 i { 
+    margin: 0 1rem;
+}
 
 
+/*  
+    SECTION COMPOSITION
+*/ 
+
+.composition { 
+    width: 90%;
+    margin: 3rem auto;
+}
+
+.composition h2:after { 
+    border-top: .2rem solid var(--green);
+}
+
+.composition p:first-of-type { 
+    font-family: 'OpenSans-Bold';
+}
+
+.composition ul { 
+    margin: 3rem 0;
+    width: 65%;
+}
+
+.composition ul li { 
+    font-family: 'OpenSans-Regular';
+    text-align: justify;
+}
+
+.composition ul li:first-child { 
+    font-family: 'OpenSans-SemiBold';
+    margin-bottom: .5rem;
+}
+
+/*
+    SECTION FOCUS
+*/
+
+.focus { 
+    background-color: var(--brown);
+    padding: 4rem 0;
+}
+
+.focus>section { 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    width: 40%;
+    margin: 0 auto;
+}
+
+.focus figure { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.focus figure figcaption{ 
+  font-family: 'OpenSans-Bold';
+}
+
+.focus figure img { 
+    width: 200px;
+    height: 200px;
+}
+
+.focus figure:first-child img{ 
+    background-color: var(--blue);
+}
+
+.focus figure:nth-child(2) img { 
+    background-color: var(--pink);
+}
+
+.focus figure:nth-child(3) img { 
+    background-color: var(--green);
+}
+
+.focus figure:nth-child(4) img { 
+    background-color: var(--darkblue);
+}
+
+.focus figure:last-child img{ 
+    background-color: var(--darkgreen);
+}
 
 
-
-
-
-
+ 
 
 
 
